--- a/Code/Mobile/TellMe.Mobile.iOS/Controllers/PlaylistViewController.xib
+++ b/Code/Mobile/TellMe.Mobile.iOS/Controllers/PlaylistViewController.xib
@@ -14,7 +14,9 @@
             <connections>
                 <outlet property="ButtonsWrapper" destination="3809" id="D7L-iu-cYb"/>
                 <outlet property="CloseButton" destination="903" id="name-outlet-903"/>
+                <outlet property="NavBarWrapperTop" destination="EDY-Zh-W5s" id="xNH-C3-EgJ"/>
                 <outlet property="NavigationBar" destination="I9v-G0-fDk" id="qq2-59-Wh9"/>
+                <outlet property="NavigationBarWrapper" destination="O3y-Vp-dvr" id="idB-rL-RO3"/>
                 <outlet property="NavigationItem" destination="5xV-bk-03U" id="tmg-e9-4Mx"/>
                 <outlet property="NextButton" destination="2737" id="name-outlet-2737"/>
                 <outlet property="PlayerWrapper" destination="1813" id="name-outlet-1813"/>
@@ -31,102 +33,107 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="I9v-G0-fDk">
-                    <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                    <color key="backgroundColor" red="0.0" green="0.74064149459999995" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <color key="barTintColor" red="0.12839525939999999" green="0.76224476100000005" blue="0.98047024009999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <textAttributes key="titleTextAttributes">
-                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    </textAttributes>
-                    <items>
-                        <navigationItem title="Playlist" id="5xV-bk-03U">
-                            <barButtonItem key="leftBarButtonItem" systemItem="stop" id="903">
-                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <connections>
-                                    <action selector="CloseButton_Activated:" destination="-1" id="944"/>
-                                </connections>
-                            </barButtonItem>
-                        </navigationItem>
-                    </items>
-                </navigationBar>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="XGU-FC-sDk">
                     <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <color key="sectionIndexBackgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </tableView>
                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1813">
-                    <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                     <subviews>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3809">
-                            <rect key="frame" x="10" y="494" width="355" height="99"/>
+                        <imageView contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="1846" customClass="Picture">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            <color key="backgroundColor" white="0.66666666666666696" alpha="1" colorSpace="calibratedWhite"/>
+                        </imageView>
+                        <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="5706">
+                            <rect key="frame" x="169" y="315" width="37" height="37"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="37" id="5755"/>
+                                <constraint firstAttribute="width" secondItem="5706" secondAttribute="height" multiplier="1:1" id="5756"/>
+                            </constraints>
+                        </activityIndicatorView>
+                        <view alpha="1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3809">
+                            <rect key="frame" x="77" y="597" width="220" height="60"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2738">
-                                    <rect key="frame" x="102.5" y="24.5" width="50" height="50"/>
+                                    <rect key="frame" x="15" y="5" width="50" height="50"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="50" id="3631"/>
                                         <constraint firstAttribute="width" secondItem="2738" secondAttribute="height" multiplier="1:1" id="3632"/>
                                     </constraints>
-                                    <color key="tintColor" red="0.12839525939999999" green="0.76224476100000005" blue="0.98047024009999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <state key="normal" image="Prev"/>
                                     <connections>
                                         <action selector="PreviousButton_TouchUpInside:" destination="-1" eventType="touchUpInside" id="3705"/>
                                     </connections>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2737">
-                                    <rect key="frame" x="202.5" y="24.5" width="50" height="50"/>
+                                    <rect key="frame" x="155" y="5" width="50" height="50"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="50" id="3629"/>
                                         <constraint firstAttribute="width" secondItem="2737" secondAttribute="height" multiplier="1:1" id="3630"/>
                                     </constraints>
-                                    <color key="tintColor" red="0.12839525939999999" green="0.76224476100000005" blue="0.98047024009999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <state key="normal" image="Next"/>
                                     <connections>
                                         <action selector="NextButton_TouchUpInside:" destination="-1" eventType="touchUpInside" id="3704"/>
                                     </connections>
                                 </button>
                             </subviews>
-                            <color key="backgroundColor" red="0.97637468579999998" green="0.97653776410000004" blue="0.97635322810000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <color key="backgroundColor" red="0.12839525939999999" green="0.76224476100000005" blue="0.98047024009999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
-                                <constraint firstItem="2737" firstAttribute="centerX" secondItem="3809" secondAttribute="centerX" constant="50" id="3826"/>
-                                <constraint firstAttribute="centerX" secondItem="2738" secondAttribute="centerX" constant="50" id="3827"/>
+                                <constraint firstItem="2737" firstAttribute="centerX" secondItem="3809" secondAttribute="centerX" constant="70" id="3826"/>
+                                <constraint firstAttribute="centerX" secondItem="2738" secondAttribute="centerX" constant="70" id="3827"/>
                                 <constraint firstItem="2738" firstAttribute="centerY" secondItem="3809" secondAttribute="centerY" id="3828"/>
                                 <constraint firstItem="2737" firstAttribute="centerY" secondItem="3809" secondAttribute="centerY" id="3829"/>
-                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="IGQ-xJ-Zma"/>
+                                <constraint firstAttribute="height" constant="60" id="IGQ-xJ-Zma"/>
+                                <constraint firstAttribute="width" constant="220" id="O5g-Zj-LWV"/>
                             </constraints>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                    <integer key="value" value="8"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
                         </view>
-                        <imageView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1846" customClass="Picture">
-                            <rect key="frame" x="10" y="10" width="355" height="473.5"/>
-                            <color key="backgroundColor" white="0.66666666666666696" alpha="1" colorSpace="calibratedWhite"/>
-                            <constraints>
-                                <constraint firstAttribute="width" secondItem="1846" secondAttribute="height" multiplier="3:4" id="3776"/>
-                            </constraints>
-                        </imageView>
-                        <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="5706">
-                            <rect key="frame" x="169" y="228" width="37" height="37"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="37" id="5755"/>
-                                <constraint firstAttribute="width" secondItem="5706" secondAttribute="height" multiplier="1:1" id="5756"/>
-                            </constraints>
-                        </activityIndicatorView>
                     </subviews>
                     <color key="backgroundColor" red="0.92539894580000004" green="0.92555403709999995" blue="0.92537856100000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
-                        <constraint firstItem="3809" firstAttribute="width" secondItem="1846" secondAttribute="width" id="5GQ-MK-cNH"/>
                         <constraint firstItem="5706" firstAttribute="centerY" secondItem="1846" secondAttribute="centerY" id="73J-Ta-ogO"/>
                         <constraint firstItem="1846" firstAttribute="centerX" secondItem="1813" secondAttribute="centerX" id="7pp-SA-gE7"/>
-                        <constraint firstItem="1846" firstAttribute="top" secondItem="1813" secondAttribute="top" constant="10" id="SnV-5G-SAT"/>
-                        <constraint firstItem="3809" firstAttribute="top" secondItem="1846" secondAttribute="bottom" constant="10.5" id="epG-pP-5Dp"/>
-                        <constraint firstItem="3809" firstAttribute="centerX" secondItem="1846" secondAttribute="centerX" id="hLo-UT-bcp"/>
-                        <constraint firstItem="1846" firstAttribute="width" secondItem="1813" secondAttribute="width" constant="-20" id="nYt-Mn-d0u"/>
+                        <constraint firstItem="1846" firstAttribute="top" secondItem="1813" secondAttribute="top" id="SnV-5G-SAT"/>
+                        <constraint firstItem="1846" firstAttribute="height" secondItem="1813" secondAttribute="height" id="Zaa-1w-jBP"/>
+                        <constraint firstAttribute="bottom" secondItem="3809" secondAttribute="bottom" constant="10" id="eeD-2a-tMq"/>
+                        <constraint firstItem="1846" firstAttribute="width" secondItem="1813" secondAttribute="width" id="nYt-Mn-d0u"/>
                         <constraint firstItem="5706" firstAttribute="centerX" secondItem="1846" secondAttribute="centerX" id="tGq-yx-obe"/>
-                        <constraint firstAttribute="bottom" secondItem="3809" secondAttribute="bottom" constant="10" id="xgT-iM-Us8"/>
+                        <constraint firstItem="3809" firstAttribute="centerX" secondItem="1813" secondAttribute="centerX" id="ytv-8K-fiV"/>
                     </constraints>
                 </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yRp-xc-QbF">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="20"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="O3y-Vp-dvr">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="64"/>
+                    <subviews>
+                        <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="I9v-G0-fDk">
+                            <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <color key="barTintColor" red="0.12839525939999999" green="0.76224476100000005" blue="0.98047024009999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <textAttributes key="titleTextAttributes">
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </textAttributes>
+                            <items>
+                                <navigationItem title="Playlist" id="5xV-bk-03U">
+                                    <barButtonItem key="leftBarButtonItem" systemItem="stop" id="903">
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <connections>
+                                            <action selector="CloseButton_Activated:" destination="-1" id="944"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </navigationItem>
+                            </items>
+                        </navigationBar>
+                    </subviews>
                     <color key="backgroundColor" red="0.12839525939999999" green="0.76224476100000005" blue="0.98047024009999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="20" id="Gv2-xy-KGt"/>
+                        <constraint firstAttribute="height" constant="64" id="I9Q-bI-b7X"/>
                     </constraints>
                 </view>
             </subviews>
@@ -135,18 +142,14 @@
                 <constraint firstItem="1813" firstAttribute="width" secondItem="1" secondAttribute="width" id="1843"/>
                 <constraint firstItem="1813" firstAttribute="bottom" secondItem="1" secondAttribute="bottom" id="1844"/>
                 <constraint firstItem="1813" firstAttribute="centerX" secondItem="1" secondAttribute="centerX" id="0b1-lI-ndr"/>
-                <constraint firstItem="yRp-xc-QbF" firstAttribute="width" secondItem="1" secondAttribute="width" id="5fL-d4-RKD"/>
-                <constraint firstItem="1813" firstAttribute="top" secondItem="1" secondAttribute="top" constant="64" id="8WC-Zc-KlZ"/>
-                <constraint firstItem="yRp-xc-QbF" firstAttribute="top" secondItem="1" secondAttribute="top" id="Jwf-An-PzP"/>
-                <constraint firstItem="I9v-G0-fDk" firstAttribute="leading" secondItem="1" secondAttribute="leading" id="Pwy-bt-cMo"/>
-                <constraint firstAttribute="trailing" secondItem="I9v-G0-fDk" secondAttribute="trailing" id="THF-a3-2c0"/>
-                <constraint firstItem="I9v-G0-fDk" firstAttribute="centerX" secondItem="1" secondAttribute="centerX" id="Xw3-5w-sDI"/>
+                <constraint firstItem="1813" firstAttribute="top" secondItem="1" secondAttribute="top" id="8WC-Zc-KlZ"/>
+                <constraint firstItem="O3y-Vp-dvr" firstAttribute="width" secondItem="1" secondAttribute="width" id="CZj-GU-c7P"/>
+                <constraint firstItem="O3y-Vp-dvr" firstAttribute="top" secondItem="1" secondAttribute="top" id="EDY-Zh-W5s"/>
+                <constraint firstItem="XGU-FC-sDk" firstAttribute="top" secondItem="1" secondAttribute="top" constant="64" id="UEG-Od-1b8"/>
                 <constraint firstAttribute="trailing" secondItem="XGU-FC-sDk" secondAttribute="trailing" id="bi0-NS-Ay1"/>
                 <constraint firstItem="XGU-FC-sDk" firstAttribute="leading" secondItem="1" secondAttribute="leading" id="ewd-ZA-VR8"/>
                 <constraint firstAttribute="bottom" secondItem="XGU-FC-sDk" secondAttribute="bottom" id="lBo-pY-BFH"/>
-                <constraint firstItem="yRp-xc-QbF" firstAttribute="centerX" secondItem="1" secondAttribute="centerX" id="nnw-d1-gjJ"/>
-                <constraint firstItem="XGU-FC-sDk" firstAttribute="top" secondItem="I9v-G0-fDk" secondAttribute="bottom" id="tOZ-mb-7cE"/>
-                <constraint firstItem="I9v-G0-fDk" firstAttribute="top" secondItem="1" secondAttribute="top" constant="20" id="zvH-dr-mgq"/>
+                <constraint firstItem="O3y-Vp-dvr" firstAttribute="centerX" secondItem="1" secondAttribute="centerX" id="sXB-69-FPJ"/>
             </constraints>
             <point key="canvasLocation" x="24.5" y="51.5"/>
         </view>
