--- a/Code/Mobile/TellMe.Mobile.iOS/Controllers/PlaylistViewController.xib
+++ b/Code/Mobile/TellMe.Mobile.iOS/Controllers/PlaylistViewController.xib
@@ -13,11 +13,6 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PlaylistViewController">
             <connections>
                 <outlet property="ButtonsWrapper" destination="3809" id="D7L-iu-cYb"/>
-                <outlet property="CloseButton" destination="903" id="name-outlet-903"/>
-                <outlet property="NavBarWrapperTop" destination="EDY-Zh-W5s" id="xNH-C3-EgJ"/>
-                <outlet property="NavigationBar" destination="I9v-G0-fDk" id="qq2-59-Wh9"/>
-                <outlet property="NavigationBarWrapper" destination="O3y-Vp-dvr" id="idB-rL-RO3"/>
-                <outlet property="NavigationItem" destination="5xV-bk-03U" id="tmg-e9-4Mx"/>
                 <outlet property="NextButton" destination="2737" id="name-outlet-2737"/>
                 <outlet property="PlayerWrapper" destination="1813" id="name-outlet-1813"/>
                 <outlet property="PlayerWrapperTop" destination="8WC-Zc-KlZ" id="5iA-DP-YqP"/>
@@ -52,7 +47,7 @@
                                 <constraint firstAttribute="width" secondItem="5706" secondAttribute="height" multiplier="1:1" id="5756"/>
                             </constraints>
                         </activityIndicatorView>
-                        <view alpha="1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3809">
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3809">
                             <rect key="frame" x="77" y="597" width="220" height="60"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2738">
@@ -80,7 +75,7 @@
                                     </connections>
                                 </button>
                             </subviews>
-                            <color key="backgroundColor" red="0.12839525939999999" green="0.76224476100000005" blue="0.98047024009999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <color key="backgroundColor" red="0.12941176470588234" green="0.76078431372549016" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstItem="2737" firstAttribute="centerX" secondItem="3809" secondAttribute="centerX" constant="70" id="3826"/>
@@ -109,33 +104,6 @@
                         <constraint firstItem="3809" firstAttribute="centerX" secondItem="1813" secondAttribute="centerX" id="ytv-8K-fiV"/>
                     </constraints>
                 </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="O3y-Vp-dvr">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="64"/>
-                    <subviews>
-                        <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="I9v-G0-fDk">
-                            <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <color key="barTintColor" red="0.12839525939999999" green="0.76224476100000005" blue="0.98047024009999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            <textAttributes key="titleTextAttributes">
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </textAttributes>
-                            <items>
-                                <navigationItem title="Playlist" id="5xV-bk-03U">
-                                    <barButtonItem key="leftBarButtonItem" systemItem="stop" id="903">
-                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <connections>
-                                            <action selector="CloseButton_Activated:" destination="-1" id="944"/>
-                                        </connections>
-                                    </barButtonItem>
-                                </navigationItem>
-                            </items>
-                        </navigationBar>
-                    </subviews>
-                    <color key="backgroundColor" red="0.12839525939999999" green="0.76224476100000005" blue="0.98047024009999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="64" id="I9Q-bI-b7X"/>
-                    </constraints>
-                </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
@@ -143,14 +111,12 @@
                 <constraint firstItem="1813" firstAttribute="bottom" secondItem="1" secondAttribute="bottom" id="1844"/>
                 <constraint firstItem="1813" firstAttribute="centerX" secondItem="1" secondAttribute="centerX" id="0b1-lI-ndr"/>
                 <constraint firstItem="1813" firstAttribute="top" secondItem="1" secondAttribute="top" id="8WC-Zc-KlZ"/>
-                <constraint firstItem="O3y-Vp-dvr" firstAttribute="width" secondItem="1" secondAttribute="width" id="CZj-GU-c7P"/>
-                <constraint firstItem="O3y-Vp-dvr" firstAttribute="top" secondItem="1" secondAttribute="top" id="EDY-Zh-W5s"/>
                 <constraint firstItem="XGU-FC-sDk" firstAttribute="top" secondItem="1" secondAttribute="top" constant="64" id="UEG-Od-1b8"/>
                 <constraint firstAttribute="trailing" secondItem="XGU-FC-sDk" secondAttribute="trailing" id="bi0-NS-Ay1"/>
                 <constraint firstItem="XGU-FC-sDk" firstAttribute="leading" secondItem="1" secondAttribute="leading" id="ewd-ZA-VR8"/>
                 <constraint firstAttribute="bottom" secondItem="XGU-FC-sDk" secondAttribute="bottom" id="lBo-pY-BFH"/>
-                <constraint firstItem="O3y-Vp-dvr" firstAttribute="centerX" secondItem="1" secondAttribute="centerX" id="sXB-69-FPJ"/>
             </constraints>
+            <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
             <point key="canvasLocation" x="24.5" y="51.5"/>
         </view>
     </objects>
