--- a/Code/Mobile/TellMe.Mobile.iOS/Auth.storyboard
+++ b/Code/Mobile/TellMe.Mobile.iOS/Auth.storyboard
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+﻿<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="464">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
@@ -253,7 +253,7 @@
                                     <segue id="28908" destination="17010" kind="show"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="28579" translatesAutoresizingMaskIntoConstraints="NO" text="Tell Me a Story">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="28579" translatesAutoresizingMaskIntoConstraints="NO" text="StoryTella">
                                 <rect key="frame" x="95" y="46" width="184" height="37"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="30" weight="light"/>
                                 <nil key="textColor"/>
